feat:launcher icon integrated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   get: ^4.6.6
   google_fonts: ^6.2.1
+  icons_launcher: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -244,3 +245,11 @@ flutter_native_splash:
   #info_plist_files:
   #  - 'ios/Runner/Info-Debug.plist'
   #  - 'ios/Runner/Info-Release.plist'  
+
+icons_launcher:
+  image_path: "assets/images/launcher_icon.png"
+  platforms:
+    android:
+      enable: true
+    ios:
+      enable: true  
