--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   google_fonts: ^6.2.1
   icons_launcher: ^3.0.0
   flutter_bloc: ^8.1.6
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
