--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ app.*.map.json
 
 # Features
 /Feature_Functionality.md
+
+# firebase
+/firebase.json
+/lib/firebase_options.dart
+/android/app/google-services.json
+
