--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ app.*.map.json
 /Feature_Functionality.md
 
 # firebase
-/firebase.json
-/lib/firebase_options.dart
-/android/app/google-services.json
+# /firebase.json
+# /lib/firebase_options.dart
+# /android/app/google-services.json
 
