--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
+  geolocator: ^13.0.1
+  mongo_dart: ^0.10.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
