--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   geolocator: ^13.0.1
   mongo_dart: ^0.10.3
   url_launcher: ^6.3.1
+  table_calendar: ^3.1.2
+
 
 dev_dependencies:
   flutter_test:
