--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   mongo_dart: ^0.10.3
   url_launcher: ^6.3.1
   table_calendar: ^3.1.2
+  dropdown_textfield: ^1.2.0
 
 
 dev_dependencies:
