--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   url_launcher: ^6.3.1
   table_calendar: ^3.1.2
   google_sign_in: ^6.2.1
+  animated_toggle_switch: ^0.8.3
 
 
 dev_dependencies:
