--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   url_launcher: ^6.3.1
   table_calendar: ^3.1.2
   google_sign_in: ^6.2.1
+  google_generative_ai: ^0.4.6
+  flutter_dotenv: ^5.2.1
 
 
 dev_dependencies:
