--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,6 @@ dependencies:
   google_generative_ai: ^0.4.6
   flutter_dotenv: ^5.2.1
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -88,6 +87,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
