1. Implemented Skip button functionality to redirect to the login page. 2. Added adaptive WillPopScope to exit the app instead of returning to the onboarding screen. 3. Enhanced UI of Signup and Login pages for better user experience.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,3 +46,7 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    implementation platform('com.google.firebase:firebase-bom:33.5.1')
+}
