--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,39 @@
+// allprojects {
+//     repositories {
+//         google()
+//         mavenCentral()
+//     }
+//     dependencies {
+//         // classpath 'com.android.tools.build:gradle:7.0.0'  // Use the correct Android Gradle Plugin version here
+//         classpath 'com.google.gms:google-services:4.4.2'
+//     }
+// }
+
+
+
+// rootProject.buildDir = "../build"
+// subprojects {
+//     project.buildDir = "${rootProject.buildDir}/${project.name}"
+// }
+// subprojects {
+//     project.evaluationDependsOn(":app")
+// }
+
+// tasks.register("clean", Delete) {
+//     delete rootProject.buildDir
+// }
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.0'  // Ensure you are using the correct version
+        classpath 'com.google.gms:google-services:4.4.2'
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -5,11 +41,10 @@ allprojects {
     }
 }
 
+// Configure root project build directory and tasks
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(":app")
 }
 
