--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,35 +1,13 @@
-// allprojects {
-//     repositories {
-//         google()
-//         mavenCentral()
-//     }
-//     dependencies {
-//         // classpath 'com.android.tools.build:gradle:7.0.0'  // Use the correct Android Gradle Plugin version here
-//         classpath 'com.google.gms:google-services:4.4.2'
-//     }
-// }
-
-
-
-// rootProject.buildDir = "../build"
-// subprojects {
-//     project.buildDir = "${rootProject.buildDir}/${project.name}"
-// }
-// subprojects {
-//     project.evaluationDependsOn(":app")
-// }
-
-// tasks.register("clean", Delete) {
-//     delete rootProject.buildDir
-// }
-
 buildscript {
+    ext.kotlin_version = '2.0.0'
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0'  // Ensure you are using the correct version
+        classpath 'com.android.tools.build:gradle:8.7.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.4.2'
     }
 }
@@ -41,10 +19,11 @@ allprojects {
     }
 }
 
-// Configure root project build directory and tasks
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
+}
+subprojects {
     project.evaluationDependsOn(":app")
 }
 
